rust/codec-latex/tests/snapshots/examples__hello-world.coarse.json.snap
---
source: rust/codec-latex/tests/examples.rs
expression: article
---
{
  "type": "Article",
  "content": [
    {
      "type": "RawBlock",
      "format": "latex",
      "content": {
        "string": "\\documentclass{article}\n\n\\begin{document}\nHello, world!\n\\end{document}\n"
      }
    }
  ],
  "repository": "https://github.com/stencila/stencila",
  "path": "rust/codec-latex/tests/examples/hello-world.tex",
  "commit": "redacted"
}
