rust/codec-latex/tests/snapshots/examples__hello-world.coarse.tex.snap
---
source: rust/codec-latex/tests/examples.rs
expression: "&latex"
---
\documentclass{article}

\begin{document}
Hello, world!
\end{document}
