rust/codec-latex/tests/snapshots/examples__hello-world.fine.json.snap
---
source: rust/codec-latex/tests/examples.rs
expression: article
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Hello, world!"
          }
        }
      ]
    }
  ]
}
