rust/codec-latex/tests/snapshots/examples__if.coarse.encode.map.snap
---
source: rust/codec-latex/tests/examples.rs
expression: info.mapping
---
start     end        offsets   node_type+property                   authorship
    11     15       (11, 15)   IfBlock.code
    17     41        (6, 26)   RawBlock.content
    17     41         (0, 0)   RawBlock
    17     41         (0, 0)   IfBlock.content
     0     50       (-17, 9)   IfBlock
     0     51         (0, 1)   Article.content
     0     51         (0, 0)   Article
