rust/codec-latex/tests/snapshots/examples__if.coarse.json.snap
---
source: rust/codec-latex/tests/examples.rs
expression: article
---
{
  "type": "Article",
  "content": [
    {
      "type": "IfBlock",
      "clauses": [
        {
          "type": "IfBlockClause",
          "code": {
            "string": "true"
          },
          "content": [
            {
              "type": "RawBlock",
              "format": "latex",
              "content": {
                "string": "\\p Conditional content.\n"
              }
            }
          ]
        }
      ]
    }
  ],
  "repository": "https://github.com/stencila/stencila",
  "path": "rust/codec-latex/tests/examples/if.tex",
  "commit": "redacted"
}
