rust/codec-latex/tests/snapshots/examples__if.coarse.tex.snap
---
source: rust/codec-latex/tests/examples.rs
expression: "&latex"
---
\begin{if}{true}
    \p Conditional content.
\end{if}
