rust/codec-latex/tests/snapshots/examples__if.fine.json.snap
---
source: rust/codec-latex/tests/examples.rs
expression: article
---
{
  "type": "Article",
  "content": [
    {
      "type": "IfBlock",
      "clauses": [
        {
          "type": "IfBlockClause",
          "code": {
            "string": "true"
          },
          "content": [
            {
              "type": "Paragraph",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "Conditional content."
                  }
                }
              ]
            }
          ]
        }
      ]
    }
  ],
  "source": "rust/codec-latex/tests/examples/if.tex",
  "commit": "redacted"
}
