rust/codec-latex/tests/snapshots/examples__if.fine.tex.snap
---
source: rust/codec-latex/tests/examples.rs
expression: "&latex"
---
\begin{if}{true}

Conditional content.
\end{if}
