rust/codec-latex/tests/snapshots/examples__input.coarse.json.snap
---
source: rust/codec-latex/tests/examples.rs
expression: article
---
{
  "type": "Article",
  "content": [
    {
      "type": "IncludeBlock",
      "source": "intro.tex"
    },
    {
      "type": "IncludeBlock",
      "source": "methods.tex"
    },
    {
      "type": "IncludeBlock",
      "source": "results.tex"
    },
    {
      "type": "IncludeBlock",
      "source": "discussion.tex"
    }
  ],
  "repository": "git@github.com:stencila/stencila",
  "path": "rust/codec-latex/tests/examples/input.tex",
  "commit": "redacted"
}
