rust/codec-latex/tests/snapshots/examples__input.coarse.tex.snap
---
source: rust/codec-latex/tests/examples.rs
expression: "&latex"
---
\input{intro}

\input{methods}

\input{results}

\input{discussion}
